Cleanup previous changes.
Signed-off-by: currantw <taylor.curran@improving.com>