@@ -14,7 +14,6 @@ import static org.opensearch.sql.legacy.util.MatcherUtils.featureValueOf;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.hamcrest.Matcher;
@@ -70,7 +69,7 @@ public class BindingTupleResultSetTest {
             Arrays.asList(
                 ColumnNode.builder().alias("dateValue").type(Schema.Type.DATE).build(),
                 ColumnNode.builder().alias("gender").type(Schema.Type.TEXT).build()),
-            Collections.singletonList(
+            List.of(
                 BindingTuple.from(ImmutableMap.of("dateValue", 1529712000000L, "gender", "m")))),
         containsInAnyOrder(
             rowContents(
